// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Landing /> handles state update 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Landing
    dispatch={[Function]}
    metamask={true}
    network={4}
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        },
        "unsubscribe": [Function],
      }
    }
    whiteListed={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="landing-head"
        >
          Decentralized Derivatives Association  DRCT
        </h1>,
        <h3
          className="landing-subhead"
        >
          <div>
            <p>
              You are Connected To:
            </p>
            <p
              className="landing-network-status rinkeby-network-label"
            >
              rinkeby test network
            </p>
            
          </div>
        </h3>,
        <p>
          To use the secure Trust Wallet browser,
          <br />
          click 
          <a
            href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
          >
            here
          </a>
        </p>,
        <img
          alt=""
          className="landing-logo"
          src="logo-large.png"
        />,
      ],
      "id": "landing",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Decentralized Derivatives Association  DRCT",
          "className": "landing-head",
        },
        "ref": null,
        "rendered": "Decentralized Derivatives Association  DRCT",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div>
            <p>
              You are Connected To:
            </p>
            <p
              className="landing-network-status rinkeby-network-label"
            >
              rinkeby test network
            </p>
            
          </div>,
          "className": "landing-subhead",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                You are Connected To:
              </p>,
              <p
                className="landing-network-status rinkeby-network-label"
              >
                rinkeby test network
              </p>,
              "",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "You are Connected To:",
              },
              "ref": null,
              "rendered": "You are Connected To:",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "rinkeby test network",
                "className": "landing-network-status rinkeby-network-label",
              },
              "ref": null,
              "rendered": "rinkeby test network",
              "type": "p",
            },
            "",
          ],
          "type": "div",
        },
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "To use the secure Trust Wallet browser,",
            <br />,
            "click ",
            <a
              href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
            >
              here
            </a>,
          ],
        },
        "ref": null,
        "rendered": Array [
          "To use the secure Trust Wallet browser,",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          "click ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "here",
              "href": "https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/",
            },
            "ref": null,
            "rendered": "here",
            "type": "a",
          },
        ],
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "",
          "className": "landing-logo",
          "src": "logo-large.png",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="landing-head"
          >
            Decentralized Derivatives Association  DRCT
          </h1>,
          <h3
            className="landing-subhead"
          >
            <div>
              <p>
                You are Connected To:
              </p>
              <p
                className="landing-network-status rinkeby-network-label"
              >
                rinkeby test network
              </p>
              
            </div>
          </h3>,
          <p>
            To use the secure Trust Wallet browser,
            <br />
            click 
            <a
              href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
            >
              here
            </a>
          </p>,
          <img
            alt=""
            className="landing-logo"
            src="logo-large.png"
          />,
        ],
        "id": "landing",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Decentralized Derivatives Association  DRCT",
            "className": "landing-head",
          },
          "ref": null,
          "rendered": "Decentralized Derivatives Association  DRCT",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div>
              <p>
                You are Connected To:
              </p>
              <p
                className="landing-network-status rinkeby-network-label"
              >
                rinkeby test network
              </p>
              
            </div>,
            "className": "landing-subhead",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p>
                  You are Connected To:
                </p>,
                <p
                  className="landing-network-status rinkeby-network-label"
                >
                  rinkeby test network
                </p>,
                "",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "You are Connected To:",
                },
                "ref": null,
                "rendered": "You are Connected To:",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "rinkeby test network",
                  "className": "landing-network-status rinkeby-network-label",
                },
                "ref": null,
                "rendered": "rinkeby test network",
                "type": "p",
              },
              "",
            ],
            "type": "div",
          },
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "To use the secure Trust Wallet browser,",
              <br />,
              "click ",
              <a
                href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
              >
                here
              </a>,
            ],
          },
          "ref": null,
          "rendered": Array [
            "To use the secure Trust Wallet browser,",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            "click ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "here",
                "href": "https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/",
              },
              "ref": null,
              "rendered": "here",
              "type": "a",
            },
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "",
            "className": "landing-logo",
            "src": "logo-large.png",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Landing /> renders not connected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Landing
    dispatch={[Function]}
    metamask={false}
    network={4}
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        },
        "unsubscribe": [Function],
      }
    }
    whiteListed={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="landing-head"
        >
          Decentralized Derivatives Association  DRCT
        </h1>,
        <h3
          className="landing-subhead"
        >
          <div>
            <p>
              Please Login to 
              <a
                href="https://metamask.io/"
              >
                MetaMask
              </a>
            </p>
            <p
              className="landing_p"
            >
              <a
                href="https://www.cryptocompare.com/wallets/guides/how-to-use-metamask/"
              >
                What is MetaMask?
              </a>
            </p>
            <div
              className="landing-network-status"
            >
              Select :
              <p
                className="rinkeby-network-label"
              >
                rinkeby test network
              </p>
            </div>
          </div>
        </h3>,
        <p>
          To use the secure Trust Wallet browser,
          <br />
          click 
          <a
            href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
          >
            here
          </a>
        </p>,
        <img
          alt=""
          className="landing-logo"
          src="logo-large.png"
        />,
      ],
      "id": "landing",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Decentralized Derivatives Association  DRCT",
          "className": "landing-head",
        },
        "ref": null,
        "rendered": "Decentralized Derivatives Association  DRCT",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div>
            <p>
              Please Login to 
              <a
                href="https://metamask.io/"
              >
                MetaMask
              </a>
            </p>
            <p
              className="landing_p"
            >
              <a
                href="https://www.cryptocompare.com/wallets/guides/how-to-use-metamask/"
              >
                What is MetaMask?
              </a>
            </p>
            <div
              className="landing-network-status"
            >
              Select :
              <p
                className="rinkeby-network-label"
              >
                rinkeby test network
              </p>
            </div>
          </div>,
          "className": "landing-subhead",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Please Login to 
                <a
                  href="https://metamask.io/"
                >
                  MetaMask
                </a>
              </p>,
              <p
                className="landing_p"
              >
                <a
                  href="https://www.cryptocompare.com/wallets/guides/how-to-use-metamask/"
                >
                  What is MetaMask?
                </a>
              </p>,
              <div
                className="landing-network-status"
              >
                Select :
                <p
                  className="rinkeby-network-label"
                >
                  rinkeby test network
                </p>
              </div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Please Login to ",
                  <a
                    href="https://metamask.io/"
                  >
                    MetaMask
                  </a>,
                ],
              },
              "ref": null,
              "rendered": Array [
                "Please Login to ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "MetaMask",
                    "href": "https://metamask.io/",
                  },
                  "ref": null,
                  "rendered": "MetaMask",
                  "type": "a",
                },
              ],
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="https://www.cryptocompare.com/wallets/guides/how-to-use-metamask/"
                >
                  What is MetaMask?
                </a>,
                "className": "landing_p",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "What is MetaMask?",
                  "href": "https://www.cryptocompare.com/wallets/guides/how-to-use-metamask/",
                },
                "ref": null,
                "rendered": "What is MetaMask?",
                "type": "a",
              },
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Select :",
                  <p
                    className="rinkeby-network-label"
                  >
                    rinkeby test network
                  </p>,
                ],
                "className": "landing-network-status",
              },
              "ref": null,
              "rendered": Array [
                "Select :",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "rinkeby test network",
                    "className": "rinkeby-network-label",
                  },
                  "ref": null,
                  "rendered": "rinkeby test network",
                  "type": "p",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "To use the secure Trust Wallet browser,",
            <br />,
            "click ",
            <a
              href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
            >
              here
            </a>,
          ],
        },
        "ref": null,
        "rendered": Array [
          "To use the secure Trust Wallet browser,",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          "click ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "here",
              "href": "https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/",
            },
            "ref": null,
            "rendered": "here",
            "type": "a",
          },
        ],
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "",
          "className": "landing-logo",
          "src": "logo-large.png",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="landing-head"
          >
            Decentralized Derivatives Association  DRCT
          </h1>,
          <h3
            className="landing-subhead"
          >
            <div>
              <p>
                Please Login to 
                <a
                  href="https://metamask.io/"
                >
                  MetaMask
                </a>
              </p>
              <p
                className="landing_p"
              >
                <a
                  href="https://www.cryptocompare.com/wallets/guides/how-to-use-metamask/"
                >
                  What is MetaMask?
                </a>
              </p>
              <div
                className="landing-network-status"
              >
                Select :
                <p
                  className="rinkeby-network-label"
                >
                  rinkeby test network
                </p>
              </div>
            </div>
          </h3>,
          <p>
            To use the secure Trust Wallet browser,
            <br />
            click 
            <a
              href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
            >
              here
            </a>
          </p>,
          <img
            alt=""
            className="landing-logo"
            src="logo-large.png"
          />,
        ],
        "id": "landing",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Decentralized Derivatives Association  DRCT",
            "className": "landing-head",
          },
          "ref": null,
          "rendered": "Decentralized Derivatives Association  DRCT",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div>
              <p>
                Please Login to 
                <a
                  href="https://metamask.io/"
                >
                  MetaMask
                </a>
              </p>
              <p
                className="landing_p"
              >
                <a
                  href="https://www.cryptocompare.com/wallets/guides/how-to-use-metamask/"
                >
                  What is MetaMask?
                </a>
              </p>
              <div
                className="landing-network-status"
              >
                Select :
                <p
                  className="rinkeby-network-label"
                >
                  rinkeby test network
                </p>
              </div>
            </div>,
            "className": "landing-subhead",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p>
                  Please Login to 
                  <a
                    href="https://metamask.io/"
                  >
                    MetaMask
                  </a>
                </p>,
                <p
                  className="landing_p"
                >
                  <a
                    href="https://www.cryptocompare.com/wallets/guides/how-to-use-metamask/"
                  >
                    What is MetaMask?
                  </a>
                </p>,
                <div
                  className="landing-network-status"
                >
                  Select :
                  <p
                    className="rinkeby-network-label"
                  >
                    rinkeby test network
                  </p>
                </div>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Please Login to ",
                    <a
                      href="https://metamask.io/"
                    >
                      MetaMask
                    </a>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Please Login to ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "MetaMask",
                      "href": "https://metamask.io/",
                    },
                    "ref": null,
                    "rendered": "MetaMask",
                    "type": "a",
                  },
                ],
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <a
                    href="https://www.cryptocompare.com/wallets/guides/how-to-use-metamask/"
                  >
                    What is MetaMask?
                  </a>,
                  "className": "landing_p",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "What is MetaMask?",
                    "href": "https://www.cryptocompare.com/wallets/guides/how-to-use-metamask/",
                  },
                  "ref": null,
                  "rendered": "What is MetaMask?",
                  "type": "a",
                },
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Select :",
                    <p
                      className="rinkeby-network-label"
                    >
                      rinkeby test network
                    </p>,
                  ],
                  "className": "landing-network-status",
                },
                "ref": null,
                "rendered": Array [
                  "Select :",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "rinkeby test network",
                      "className": "rinkeby-network-label",
                    },
                    "ref": null,
                    "rendered": "rinkeby test network",
                    "type": "p",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "To use the secure Trust Wallet browser,",
              <br />,
              "click ",
              <a
                href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
              >
                here
              </a>,
            ],
          },
          "ref": null,
          "rendered": Array [
            "To use the secure Trust Wallet browser,",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            "click ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "here",
                "href": "https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/",
              },
              "ref": null,
              "rendered": "here",
              "type": "a",
            },
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "",
            "className": "landing-logo",
            "src": "logo-large.png",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Landing /> renders not whitelisted 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Landing
    dispatch={[Function]}
    metamask={true}
    network={4}
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        },
        "unsubscribe": [Function],
      }
    }
    whiteListed={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="landing-head"
        >
          Decentralized Derivatives Association  DRCT
        </h1>,
        <h3
          className="landing-subhead"
        >
          <div>
            <p>
              You are Connected To:
            </p>
            <p
              className="landing-network-status rinkeby-network-label"
            >
              rinkeby test network
            </p>
            <div>
              <p>
                The DDA dapp is currently for members only.
              </p>
              <p>
                To learn more about membership, visit: 
                <br />
                <a
                  href="http://www.ddacoop.org/membership"
                >
                  http://www.ddacoop.org/membership
                </a>
              </p>
              <p>
                To become a member, please visit
                <br />
                <a
                  href="https://membership.ddacoop.org"
                >
                  https://membership.ddacoop.org
                </a>
              </p>
            </div>
          </div>
        </h3>,
        <p>
          To use the secure Trust Wallet browser,
          <br />
          click 
          <a
            href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
          >
            here
          </a>
        </p>,
        <img
          alt=""
          className="landing-logo"
          src="logo-large.png"
        />,
      ],
      "id": "landing",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Decentralized Derivatives Association  DRCT",
          "className": "landing-head",
        },
        "ref": null,
        "rendered": "Decentralized Derivatives Association  DRCT",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div>
            <p>
              You are Connected To:
            </p>
            <p
              className="landing-network-status rinkeby-network-label"
            >
              rinkeby test network
            </p>
            <div>
              <p>
                The DDA dapp is currently for members only.
              </p>
              <p>
                To learn more about membership, visit: 
                <br />
                <a
                  href="http://www.ddacoop.org/membership"
                >
                  http://www.ddacoop.org/membership
                </a>
              </p>
              <p>
                To become a member, please visit
                <br />
                <a
                  href="https://membership.ddacoop.org"
                >
                  https://membership.ddacoop.org
                </a>
              </p>
            </div>
          </div>,
          "className": "landing-subhead",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                You are Connected To:
              </p>,
              <p
                className="landing-network-status rinkeby-network-label"
              >
                rinkeby test network
              </p>,
              <div>
                <p>
                  The DDA dapp is currently for members only.
                </p>
                <p>
                  To learn more about membership, visit: 
                  <br />
                  <a
                    href="http://www.ddacoop.org/membership"
                  >
                    http://www.ddacoop.org/membership
                  </a>
                </p>
                <p>
                  To become a member, please visit
                  <br />
                  <a
                    href="https://membership.ddacoop.org"
                  >
                    https://membership.ddacoop.org
                  </a>
                </p>
              </div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "You are Connected To:",
              },
              "ref": null,
              "rendered": "You are Connected To:",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "rinkeby test network",
                "className": "landing-network-status rinkeby-network-label",
              },
              "ref": null,
              "rendered": "rinkeby test network",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p>
                    The DDA dapp is currently for members only.
                  </p>,
                  <p>
                    To learn more about membership, visit: 
                    <br />
                    <a
                      href="http://www.ddacoop.org/membership"
                    >
                      http://www.ddacoop.org/membership
                    </a>
                  </p>,
                  <p>
                    To become a member, please visit
                    <br />
                    <a
                      href="https://membership.ddacoop.org"
                    >
                      https://membership.ddacoop.org
                    </a>
                  </p>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "The DDA dapp is currently for members only.",
                  },
                  "ref": null,
                  "rendered": "The DDA dapp is currently for members only.",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "To learn more about membership, visit: ",
                      <br />,
                      <a
                        href="http://www.ddacoop.org/membership"
                      >
                        http://www.ddacoop.org/membership
                      </a>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "To learn more about membership, visit: ",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {},
                      "ref": null,
                      "rendered": null,
                      "type": "br",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "http://www.ddacoop.org/membership",
                        "href": "http://www.ddacoop.org/membership",
                      },
                      "ref": null,
                      "rendered": "http://www.ddacoop.org/membership",
                      "type": "a",
                    },
                  ],
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "To become a member, please visit",
                      <br />,
                      <a
                        href="https://membership.ddacoop.org"
                      >
                        https://membership.ddacoop.org
                      </a>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "To become a member, please visit",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {},
                      "ref": null,
                      "rendered": null,
                      "type": "br",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "https://membership.ddacoop.org",
                        "href": "https://membership.ddacoop.org",
                      },
                      "ref": null,
                      "rendered": "https://membership.ddacoop.org",
                      "type": "a",
                    },
                  ],
                  "type": "p",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "To use the secure Trust Wallet browser,",
            <br />,
            "click ",
            <a
              href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
            >
              here
            </a>,
          ],
        },
        "ref": null,
        "rendered": Array [
          "To use the secure Trust Wallet browser,",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          "click ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "here",
              "href": "https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/",
            },
            "ref": null,
            "rendered": "here",
            "type": "a",
          },
        ],
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "",
          "className": "landing-logo",
          "src": "logo-large.png",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="landing-head"
          >
            Decentralized Derivatives Association  DRCT
          </h1>,
          <h3
            className="landing-subhead"
          >
            <div>
              <p>
                You are Connected To:
              </p>
              <p
                className="landing-network-status rinkeby-network-label"
              >
                rinkeby test network
              </p>
              <div>
                <p>
                  The DDA dapp is currently for members only.
                </p>
                <p>
                  To learn more about membership, visit: 
                  <br />
                  <a
                    href="http://www.ddacoop.org/membership"
                  >
                    http://www.ddacoop.org/membership
                  </a>
                </p>
                <p>
                  To become a member, please visit
                  <br />
                  <a
                    href="https://membership.ddacoop.org"
                  >
                    https://membership.ddacoop.org
                  </a>
                </p>
              </div>
            </div>
          </h3>,
          <p>
            To use the secure Trust Wallet browser,
            <br />
            click 
            <a
              href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
            >
              here
            </a>
          </p>,
          <img
            alt=""
            className="landing-logo"
            src="logo-large.png"
          />,
        ],
        "id": "landing",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Decentralized Derivatives Association  DRCT",
            "className": "landing-head",
          },
          "ref": null,
          "rendered": "Decentralized Derivatives Association  DRCT",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div>
              <p>
                You are Connected To:
              </p>
              <p
                className="landing-network-status rinkeby-network-label"
              >
                rinkeby test network
              </p>
              <div>
                <p>
                  The DDA dapp is currently for members only.
                </p>
                <p>
                  To learn more about membership, visit: 
                  <br />
                  <a
                    href="http://www.ddacoop.org/membership"
                  >
                    http://www.ddacoop.org/membership
                  </a>
                </p>
                <p>
                  To become a member, please visit
                  <br />
                  <a
                    href="https://membership.ddacoop.org"
                  >
                    https://membership.ddacoop.org
                  </a>
                </p>
              </div>
            </div>,
            "className": "landing-subhead",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p>
                  You are Connected To:
                </p>,
                <p
                  className="landing-network-status rinkeby-network-label"
                >
                  rinkeby test network
                </p>,
                <div>
                  <p>
                    The DDA dapp is currently for members only.
                  </p>
                  <p>
                    To learn more about membership, visit: 
                    <br />
                    <a
                      href="http://www.ddacoop.org/membership"
                    >
                      http://www.ddacoop.org/membership
                    </a>
                  </p>
                  <p>
                    To become a member, please visit
                    <br />
                    <a
                      href="https://membership.ddacoop.org"
                    >
                      https://membership.ddacoop.org
                    </a>
                  </p>
                </div>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "You are Connected To:",
                },
                "ref": null,
                "rendered": "You are Connected To:",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "rinkeby test network",
                  "className": "landing-network-status rinkeby-network-label",
                },
                "ref": null,
                "rendered": "rinkeby test network",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <p>
                      The DDA dapp is currently for members only.
                    </p>,
                    <p>
                      To learn more about membership, visit: 
                      <br />
                      <a
                        href="http://www.ddacoop.org/membership"
                      >
                        http://www.ddacoop.org/membership
                      </a>
                    </p>,
                    <p>
                      To become a member, please visit
                      <br />
                      <a
                        href="https://membership.ddacoop.org"
                      >
                        https://membership.ddacoop.org
                      </a>
                    </p>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "The DDA dapp is currently for members only.",
                    },
                    "ref": null,
                    "rendered": "The DDA dapp is currently for members only.",
                    "type": "p",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "To learn more about membership, visit: ",
                        <br />,
                        <a
                          href="http://www.ddacoop.org/membership"
                        >
                          http://www.ddacoop.org/membership
                        </a>,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      "To learn more about membership, visit: ",
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {},
                        "ref": null,
                        "rendered": null,
                        "type": "br",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "http://www.ddacoop.org/membership",
                          "href": "http://www.ddacoop.org/membership",
                        },
                        "ref": null,
                        "rendered": "http://www.ddacoop.org/membership",
                        "type": "a",
                      },
                    ],
                    "type": "p",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "To become a member, please visit",
                        <br />,
                        <a
                          href="https://membership.ddacoop.org"
                        >
                          https://membership.ddacoop.org
                        </a>,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      "To become a member, please visit",
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {},
                        "ref": null,
                        "rendered": null,
                        "type": "br",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "https://membership.ddacoop.org",
                          "href": "https://membership.ddacoop.org",
                        },
                        "ref": null,
                        "rendered": "https://membership.ddacoop.org",
                        "type": "a",
                      },
                    ],
                    "type": "p",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "To use the secure Trust Wallet browser,",
              <br />,
              "click ",
              <a
                href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
              >
                here
              </a>,
            ],
          },
          "ref": null,
          "rendered": Array [
            "To use the secure Trust Wallet browser,",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            "click ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "here",
                "href": "https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/",
              },
              "ref": null,
              "rendered": "here",
              "type": "a",
            },
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "",
            "className": "landing-logo",
            "src": "logo-large.png",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Landing /> renders the component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Landing
    dispatch={[Function]}
    metamask={true}
    network={4}
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        },
        "unsubscribe": [Function],
      }
    }
    whiteListed={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="landing-head"
        >
          Decentralized Derivatives Association  DRCT
        </h1>,
        <h3
          className="landing-subhead"
        >
          <div>
            <p>
              You are Connected To:
            </p>
            <p
              className="landing-network-status rinkeby-network-label"
            >
              rinkeby test network
            </p>
            
          </div>
        </h3>,
        <p>
          To use the secure Trust Wallet browser,
          <br />
          click 
          <a
            href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
          >
            here
          </a>
        </p>,
        <img
          alt=""
          className="landing-logo"
          src="logo-large.png"
        />,
      ],
      "id": "landing",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Decentralized Derivatives Association  DRCT",
          "className": "landing-head",
        },
        "ref": null,
        "rendered": "Decentralized Derivatives Association  DRCT",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div>
            <p>
              You are Connected To:
            </p>
            <p
              className="landing-network-status rinkeby-network-label"
            >
              rinkeby test network
            </p>
            
          </div>,
          "className": "landing-subhead",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                You are Connected To:
              </p>,
              <p
                className="landing-network-status rinkeby-network-label"
              >
                rinkeby test network
              </p>,
              "",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "You are Connected To:",
              },
              "ref": null,
              "rendered": "You are Connected To:",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "rinkeby test network",
                "className": "landing-network-status rinkeby-network-label",
              },
              "ref": null,
              "rendered": "rinkeby test network",
              "type": "p",
            },
            "",
          ],
          "type": "div",
        },
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "To use the secure Trust Wallet browser,",
            <br />,
            "click ",
            <a
              href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
            >
              here
            </a>,
          ],
        },
        "ref": null,
        "rendered": Array [
          "To use the secure Trust Wallet browser,",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          "click ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "here",
              "href": "https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/",
            },
            "ref": null,
            "rendered": "here",
            "type": "a",
          },
        ],
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "",
          "className": "landing-logo",
          "src": "logo-large.png",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="landing-head"
          >
            Decentralized Derivatives Association  DRCT
          </h1>,
          <h3
            className="landing-subhead"
          >
            <div>
              <p>
                You are Connected To:
              </p>
              <p
                className="landing-network-status rinkeby-network-label"
              >
                rinkeby test network
              </p>
              
            </div>
          </h3>,
          <p>
            To use the secure Trust Wallet browser,
            <br />
            click 
            <a
              href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
            >
              here
            </a>
          </p>,
          <img
            alt=""
            className="landing-logo"
            src="logo-large.png"
          />,
        ],
        "id": "landing",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Decentralized Derivatives Association  DRCT",
            "className": "landing-head",
          },
          "ref": null,
          "rendered": "Decentralized Derivatives Association  DRCT",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div>
              <p>
                You are Connected To:
              </p>
              <p
                className="landing-network-status rinkeby-network-label"
              >
                rinkeby test network
              </p>
              
            </div>,
            "className": "landing-subhead",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p>
                  You are Connected To:
                </p>,
                <p
                  className="landing-network-status rinkeby-network-label"
                >
                  rinkeby test network
                </p>,
                "",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "You are Connected To:",
                },
                "ref": null,
                "rendered": "You are Connected To:",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "rinkeby test network",
                  "className": "landing-network-status rinkeby-network-label",
                },
                "ref": null,
                "rendered": "rinkeby test network",
                "type": "p",
              },
              "",
            ],
            "type": "div",
          },
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "To use the secure Trust Wallet browser,",
              <br />,
              "click ",
              <a
                href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
              >
                here
              </a>,
            ],
          },
          "ref": null,
          "rendered": Array [
            "To use the secure Trust Wallet browser,",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            "click ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "here",
                "href": "https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/",
              },
              "ref": null,
              "rendered": "here",
              "type": "a",
            },
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "",
            "className": "landing-logo",
            "src": "logo-large.png",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Landing /> renders with wrong network id 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Landing
    dispatch={[Function]}
    metamask={true}
    network={3}
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        },
        "unsubscribe": [Function],
      }
    }
    whiteListed={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="landing-head"
        >
          Decentralized Derivatives Association  DRCT
        </h1>,
        <h3
          className="landing-subhead"
        >
          <div>
            <p>
              You are Currently Connected To:
            </p>
            <p
              className="landing-network-status ropsten-network-label"
            >
              ropsten test network
            </p>
            <p>
              Please Set MetaMask To:
            </p>
            <p
              className="landing-network-status rinkeby-network-label"
            >
              rinkeby test network
            </p>
          </div>
        </h3>,
        <p>
          To use the secure Trust Wallet browser,
          <br />
          click 
          <a
            href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
          >
            here
          </a>
        </p>,
        <img
          alt=""
          className="landing-logo"
          src="logo-large.png"
        />,
      ],
      "id": "landing",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Decentralized Derivatives Association  DRCT",
          "className": "landing-head",
        },
        "ref": null,
        "rendered": "Decentralized Derivatives Association  DRCT",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div>
            <p>
              You are Currently Connected To:
            </p>
            <p
              className="landing-network-status ropsten-network-label"
            >
              ropsten test network
            </p>
            <p>
              Please Set MetaMask To:
            </p>
            <p
              className="landing-network-status rinkeby-network-label"
            >
              rinkeby test network
            </p>
          </div>,
          "className": "landing-subhead",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                You are Currently Connected To:
              </p>,
              <p
                className="landing-network-status ropsten-network-label"
              >
                ropsten test network
              </p>,
              <p>
                Please Set MetaMask To:
              </p>,
              <p
                className="landing-network-status rinkeby-network-label"
              >
                rinkeby test network
              </p>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "You are Currently Connected To:",
              },
              "ref": null,
              "rendered": "You are Currently Connected To:",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "ropsten test network",
                "className": "landing-network-status ropsten-network-label",
              },
              "ref": null,
              "rendered": "ropsten test network",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Please Set MetaMask To:",
              },
              "ref": null,
              "rendered": "Please Set MetaMask To:",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "rinkeby test network",
                "className": "landing-network-status rinkeby-network-label",
              },
              "ref": null,
              "rendered": "rinkeby test network",
              "type": "p",
            },
          ],
          "type": "div",
        },
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "To use the secure Trust Wallet browser,",
            <br />,
            "click ",
            <a
              href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
            >
              here
            </a>,
          ],
        },
        "ref": null,
        "rendered": Array [
          "To use the secure Trust Wallet browser,",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          "click ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "here",
              "href": "https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/",
            },
            "ref": null,
            "rendered": "here",
            "type": "a",
          },
        ],
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "",
          "className": "landing-logo",
          "src": "logo-large.png",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="landing-head"
          >
            Decentralized Derivatives Association  DRCT
          </h1>,
          <h3
            className="landing-subhead"
          >
            <div>
              <p>
                You are Currently Connected To:
              </p>
              <p
                className="landing-network-status ropsten-network-label"
              >
                ropsten test network
              </p>
              <p>
                Please Set MetaMask To:
              </p>
              <p
                className="landing-network-status rinkeby-network-label"
              >
                rinkeby test network
              </p>
            </div>
          </h3>,
          <p>
            To use the secure Trust Wallet browser,
            <br />
            click 
            <a
              href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
            >
              here
            </a>
          </p>,
          <img
            alt=""
            className="landing-logo"
            src="logo-large.png"
          />,
        ],
        "id": "landing",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Decentralized Derivatives Association  DRCT",
            "className": "landing-head",
          },
          "ref": null,
          "rendered": "Decentralized Derivatives Association  DRCT",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div>
              <p>
                You are Currently Connected To:
              </p>
              <p
                className="landing-network-status ropsten-network-label"
              >
                ropsten test network
              </p>
              <p>
                Please Set MetaMask To:
              </p>
              <p
                className="landing-network-status rinkeby-network-label"
              >
                rinkeby test network
              </p>
            </div>,
            "className": "landing-subhead",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p>
                  You are Currently Connected To:
                </p>,
                <p
                  className="landing-network-status ropsten-network-label"
                >
                  ropsten test network
                </p>,
                <p>
                  Please Set MetaMask To:
                </p>,
                <p
                  className="landing-network-status rinkeby-network-label"
                >
                  rinkeby test network
                </p>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "You are Currently Connected To:",
                },
                "ref": null,
                "rendered": "You are Currently Connected To:",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "ropsten test network",
                  "className": "landing-network-status ropsten-network-label",
                },
                "ref": null,
                "rendered": "ropsten test network",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Please Set MetaMask To:",
                },
                "ref": null,
                "rendered": "Please Set MetaMask To:",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "rinkeby test network",
                  "className": "landing-network-status rinkeby-network-label",
                },
                "ref": null,
                "rendered": "rinkeby test network",
                "type": "p",
              },
            ],
            "type": "div",
          },
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "To use the secure Trust Wallet browser,",
              <br />,
              "click ",
              <a
                href="https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/"
              >
                here
              </a>,
            ],
          },
          "ref": null,
          "rendered": Array [
            "To use the secure Trust Wallet browser,",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            "click ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "here",
                "href": "https://links.trustwalletapp.com/a/key_live_lfvIpVeI9TFWxPCqwU8rZnogFqhnzs4D?&event=openURL&url=http://localhost/",
              },
              "ref": null,
              "rendered": "here",
              "type": "a",
            },
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "",
            "className": "landing-logo",
            "src": "logo-large.png",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
